--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\soren\\anaconda3\\python.exe"
+    "python.pythonPath": "C:\\Users\\seanm\\scoop\\shims\\python.exe"
 }
