--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,5 +18,5 @@ jobs:
         run: cargo fmt -- --check
       - name: Clippy
         run: cargo clippy --all-targets --all-features -- -D warnings
-      - name: Tests
-        run: cargo test --all-targets --all-features
+      - name: Tests (fast)
+        run: cargo test --workspace --lib --tests --all-features -- --skip test_sadf_test
