Expand Astro docs into complete library documentation

--- a/.github/workflows/docs-pages.yml
+++ b/.github/workflows/docs-pages.yml
@@ -5,6 +5,8 @@ on:
     branches: ["main"]
     paths:
       - "docs-site/**"
+      - "docs/**"
+      - "README.md"
       - ".github/workflows/docs-pages.yml"
   workflow_dispatch:
 
@@ -26,9 +28,9 @@ jobs:
         with:
           node-version: 20
           cache: npm
-          cache-dependency-path: docs-site/package.json
+          cache-dependency-path: docs-site/package-lock.json
       - name: Install docs dependencies
-        run: npm install
+        run: npm ci
         working-directory: docs-site
       - name: Build Astro docs
         run: npm run build
