feat(openquant): add AFML Ch20 hpc_parallel execution module

--- a/crates/openquant/Cargo.toml
+++ b/crates/openquant/Cargo.toml
@@ -35,3 +35,7 @@ harness = false
 [[bench]]
 name = "synthetic_ticker_pipeline"
 harness = false
+
+[[bench]]
+name = "hpc_parallel_scaling"
+harness = false
