Add streaming HPC early-warning analytics module

--- a/crates/openquant/Cargo.toml
+++ b/crates/openquant/Cargo.toml
@@ -39,3 +39,7 @@ harness = false
 [[bench]]
 name = "hpc_parallel_scaling"
 harness = false
+
+[[bench]]
+name = "streaming_hpc_scaling"
+harness = false
