--- a/crates/pyopenquant/Cargo.toml
+++ b/crates/pyopenquant/Cargo.toml
@@ -13,7 +13,9 @@ crate-type = ["cdylib"]
 chrono = "0.4"
 nalgebra = "0.32"
 openquant = { path = "../openquant" }
+polars = { version = "0.46", default-features = false }
 pyo3 = { version = "0.23", features = ["extension-module"] }
+pyo3-polars = "0.20"
 
 [package.metadata.maturin]
 name = "openquant._core"
